Reservation logic is present with simple ui representation.